<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Todo</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Please enter your Name</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_password">Please enter your Password</string>
    <string name="invalid_login">Invalid login, please try again</string>
    <string name="invalid_email">Email is invalid, please try again</string>
    <string name="invalid_password">Password is invalid, please try again</string>
    <string name="welcome_label">Welcome to Todo</string>
    <string name="login_label">Login to Todo</string>
    <string name="register_label" translatable="false">Join Todo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_task">New Task</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello Blank Fragment</string>
    <string name="re_enter_your_pass">Reinsert your password</string>
    <string name="enter_your_email">Insert your email</string>
    <string name="enter_your_pass">Insert your password</string>
    <string name="already_registred">You already registred? Login now!</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="add_new_task">Add New Task</string>
    <string name="save_task">Save Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="due_date" translatable="false">Due Date</string>
    <string name="state">State</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="priority">Priority</string>
    <string name="task_title">Task Title</string>
    <string name="exp_date" translatable="false">exp Date</string>
    <string name="assigned_to">Assigned To</string>
    <string name="initial">Initial</string>
    <string name="Aprogress">In Progress</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="home" translatable="false">Home</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="task" translatable="false">Task</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_todo">Welcome to Todo</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="username" translatable="false">Username</string>
    <string name="_50" translatable="false">50%</string>
    <string-array name="priority_filters">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="subtask_name">Subtask Name</string>
    <string name="subtask_description">Subtask Description</string>
    <string name="status">Status</string>
    <string name="deadline" translatable="false">Deadline</string>
    <string name="save_subtask">Save Subtask</string>
    <string name="progressBar">progressBar</string>
    <string name="back_home">Back Home</string>
    <string name="add_new_subtask">Add new Subtask</string>
    <string name="app_logo" translatable="false">app_logo</string>
    <string name="select_a_user_to_chat_with">Select a user to chat with:</string>
    <string name="enter_chat">Enter Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="send">Send</string>
    <string name="turn_back">Turn Back</string>
    <string name="create_new_task">Create a new task</string>
    <string name="create_new_subtask">Create a new subtask</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="subtasks_number">Subtasks number</string>
    <string name="deadline_2024_12_31" translatable="false">Deadline: 2024-12-31</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="progress" tools:ignore="PrivateResource">Progress:</string>
    <string name="in_progress" tools:ignore="PrivateResource">In Progress</string>
    <string name="_5_days_remaining">5 days remaining</string>
    <string name="due_2024_12_31" translatable="false">Due: 2024-12-31</string>
    <string name="this_is_the_description_of_the_task">Task Description</string>
    <string name="high_priority">High Priority</string>
    <string name="user_image">User image</string>
    <string name="new_chat">New Chat</string>
    <string name="subtask">Subtask\n</string>
    <string name="name_chat">Chat name</string>
    <string name="select_user">Select User</string>
    <string name="action" translatable="false">Action</string>
    <string name="enter_all_field">Please, enter all fields.</string>
    <string name="login_succeffully">Login successfully</string>
    <string name="user_not_found">User not found.</string>
    <string name="error_fetching_data">Error retrieving data: %1$s</string>
    <string name="login_error">Login Error.</string>
    <string name="role_not_assigned">No role assigned</string>
    <string name="role_not_found">Role not found</string>
    <string name="error_loading_role">Error loading role: %1$s</string>
    <string name="state_initial">Initial</string>
    <string name="state_in_progress">In Progress</string>
    <string name="state_complete">Complete</string>
    <string name="password_not_strong_enough">The password is not strong enough.</string>
    <string name="passwords_do_not_match">The passwords do not match.</string>
    <string name="registration_success">Registration successful!</string>
    <string name="failed_to_load_messages">Failed to load messages</string>
    <string name="error_getting_messages">Error getting messages: %1$s</string>
    <string name="error_checking_chat_existence">Error checking chat existence: %1$s</string>
    <string name="error_loading_users">Error loading users: %1$s</string>
    <string name="no_message">No message</string>
    <string name="user_not_authenticated">User not authenticated</string>
    <string name="error_loading_chats">Error loading chats: %1$s</string>
    <string name="no_participants_found">No participants found!</string>
    <string name="cannot_communicate">You cannot communicate with this user!</string>
    <string name="error_loading_user_data">Error loading user data</string>
    <string name="error_retrieving_role">Error retrieving role</string>
    <string name="failed_to_add_subtask">Failed to add subtask: %1$s</string>
    <string name="subtask_added_successfully">Subtask added successfully</string>
    <string name="assigned">Assigned</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="select_date">Select date</string>
    <string name="user_role_not_found">User role not found</string>
    <string name="task_created_successfully">Task created successfully</string>
    <string name="error_creating_task">Error creating task: %1$s</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="failed_to_load_users">Failed to load users: %1$s</string>
    <string name="failed_to_retrieve_user_role">Failed to retrieve user role: %1$s</string>
    <string name="not_authorized">You are not authorized to perform this operation</string>
    <string name="failed_to_load_tasks">Failed to load tasks</string>
    <string name="subtask_progress" translatable="false">%</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="error_deleting_task">Error deleting task: %1$s</string>
    <string name="task_not_found">Task not found</string>
    <string name="error_searching_task">Error searching task: %1$s</string>
    <string name="edit_function_not_implemented">Edit functionality not implemented yet</string>
    <string name="failed_to_load_subtasks">Failed to load subtasks</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="modify_task">Modify Task</string>
    <string name="modify_subtask">Modify SubTask</string>
    <string name="error_task_not_found">Error: Task not found</string>
    <string name="error_task_not_modify">It is not possible modify task: %1$s</string>
    <string name="task_updated_successfully">Task updated successfully!</string>
    <string name="error_updating_task">Error updating task: %1$s</string>
    <string name="update_substask">Update Subtask</string>
    <string name="subtask_updated_successfully">Subtask updated successfully</string>
    <string name="failed_to_update_subtask">Failed to update subtask: %1$s</string>
    <string name="error_subtask_not_found">Error subtask not found</string>
    <string name="error_loading_subtask">Error loading subtask: %1$s</string>
    <string-array name="status_filters">
        <item>Todo</item>
        <item>Assigned</item>
        <item>Completed</item>
    </string-array>
    <string name="days_remaining">%1$d days remaining</string>
    <string name="non_ci_sono_tasks_presenti">No Tasks found! Great Work 😁</string>
    <string name="non_ci_sono_subtasks_presenti">No Subtask found! Great Work 😁</string>
    <string name="priority_high">High Priority</string>
    <string name="priority_medium">Medium Priority</string>
    <string name="priority_low">Low Priority</string>
    <string name="priority_unknown">Unknown Priority</string>
    <string name="unknown">Unknown</string>
    <string name="please_fill_all_fields">Please, fill all fields!</string>
    <string name="error_calculating_subtask_progress">Error while calculating subtask progress. Please try again later.</string>
    <string name="find_tasks">Search Tasks by: Name, Description, Deadline, Status, Assigned to</string>
    <string name="error_loading_last_message">Error loading the last message: %1$s</string>
    <string name="error_clearing_cache">Error clearing cache: %1$s</string>
    <string name="files_deleted_successfully">Files successfully deleted</string>
    <string name="no_files_to_delete">No files to delete</string>
    <string name="error_deleting_files">Error deleting files</string>
    <string name="no_chats_present">No chat present, start chatting!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street">Street</string>
    <string name="skills">Skills</string>
    <string name="save_profile">Save Profile</string>
    <string name="user_name" translatable="false">%1$s %2$s</string>
    <string name="error_loading_tasks">Error loading tasks</string>
    <string name="permission_denied">Permission denied</string>
    <string name="image_loading_error">Image error loading</string>
    <string name="logout_success">Logout success!</string>
    <string name="only_pm_can_edit_tasks">Only PM can edit task!</string>
    <string name="number" translatable="false">0</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="statistics">Statics</string>
    <string name="fill_all_field">Fill in all fields</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="error_updating_profile">Error updating profile</string>
</resources>